Adiciona listagem de posts filtrados por categorias

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Lucas Inocente
 email: olucasinocente@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Eu faço coisas
+  Desenvolvedor e Agilista
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: lucas_inocente
@@ -27,15 +27,14 @@ markdown: kramdown
 plugins:
   - jekyll-feed
 
+collections:
+  category:
+    output: true
 
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+defaults:
+  -
+    scope:
+      path: ""
+      type: category
+    values:
+      layout: "category"
