--- a/package.json
+++ b/package.json
@@ -5,11 +5,20 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --watch",
+    "test:ci": "jest"
   },
   "dependencies": {
+    "gray-matter": "^4.0.2",
     "next": "10.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "babel-jest": "^26.6.3",
+    "isomorphic-unfetch": "^3.1.0",
+    "jest": "^26.6.3",
+    "test-listen": "^1.1.0"
   }
 }
