--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gray-matter": "^4.0.2",
     "next": "10.0.2",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-html-parser": "^2.0.2"
   },
   "devDependencies": {
     "babel-jest": "^26.6.3",
