--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.2",
+    "marked": "^1.2.7",
     "next": "10.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
